5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1573_1330.log
== TEST (2019-03-11 15:19:25) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:28) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.189214
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:37) 
-- CODE:
print(round(41,70))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:40) 
-- CODE:
print(round(41,70))
-- EXECUTION TIME:
0.198239
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:55) 
-- CODE:
print(round(R$41,66))
-- ERROR:
File "XXXX", line 1
    print(round(R$41,66))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:21:11) 
-- CODE:
print(250/6=round(R$41,66))
-- ERROR:
File "XXXX", line 1
    print(250/6=round(R$41,66))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:21:19) 
-- CODE:
print(250/6=round($41,66))
-- ERROR:
File "XXXX", line 1
    print(250/6=round($41,66))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:06) 
-- CODE:
print(250/6=41,66round(66,11))
-- ERROR:
File "XXXX", line 1
    print(250/6=41,66round(66,11))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:15) 
-- CODE:
print(250/6=41,66round(66,1))
-- ERROR:
File "XXXX", line 1
    print(250/6=41,66round(66,1))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:52) 
-- CODE:
print(250/6=41,66round(41,66))
-- ERROR:
File "XXXX", line 1
    print(250/6=41,66round(41,66))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:05) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:15) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.206039
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:29) 
-- CODE:
print(round(41,67))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:32) 
-- CODE:
print(round(41,67))
-- EXECUTION TIME:
0.109599
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:38) 
-- CODE:
print(round(41,70))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:41) 
-- CODE:
print(round(41,70))
-- EXECUTION TIME:
0.126576
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:52) 
-- CODE:
print(round(42))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:54) 
-- CODE:
print(round(42))
-- EXECUTION TIME:
0.2221
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:24:45) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:24:48) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.188964
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:24:52) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:25:08) 
-- CODE:
print(round(250/6))
print(42)
-- OUTPUT:
42
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:25:10) 
-- CODE:
print(round(250/6))
print(42)
-- EXECUTION TIME:
0.120884
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:26:19) 
-- CODE:
print(round(250/6)42)

-- ERROR:
File "XXXX", line 1
    print(round(250/6)42)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:26:22) 
-- CODE:
print(round(250/6)42)

-- EXECUTION TIME:
0.136227
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print(round(250/6)42)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:26:32) 
-- CODE:
print(42round(250/6))

-- ERROR:
File "XXXX", line 1
    print(42round(250/6))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:26:34) 
-- CODE:
print(42round(250/6))

-- ERROR:
File "XXXX", line 1
    print(42round(250/6))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:27:00) 
-- CODE:
print("42round(250/6)")

-- OUTPUT:
42round(250/6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:27:05) 
-- CODE:
print("42round(250/6)")

-- EXECUTION TIME:
0.116486
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42round(250/6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:27:06) 
-- CODE:
print("42round(250/6)")

-- OUTPUT:
42round(250/6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:27:19) 
-- CODE:
print("round(250/6)=42")

-- OUTPUT:
round(250/6)=42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:27:21) 
-- CODE:
print("round(250/6)=42")

-- EXECUTION TIME:
0.132496
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(250/6)=42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:58) 
-- CODE:
print("round(41.66)")

-- OUTPUT:
round(41.66)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:30:01) 
-- CODE:
print("round(41.66)")

-- EXECUTION TIME:
0.198268
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41.66)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:02) 
-- CODE:
print("round(41.66)")

-- OUTPUT:
round(41.66)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:53) 
-- CODE:
print("round(250/6)")

-- OUTPUT:
round(250/6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:01) 
-- CODE:
print(round(250/6))

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:15) 
-- CODE:
print(round(250/6,2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:17) 
-- CODE:
print(round(250/6,2))

-- EXECUTION TIME:
0.117443
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:35:52) 
-- CODE:
print(round(250/6,2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:35:54) 
-- CODE:
print(round(250/6,2))

-- EXECUTION TIME:
0.190698
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
